<resources>
    <string name="app_name" translatable="false">PA Voter Registration App</string>
    <string name="no_intent_handler" translatable="false">
        There are no applications available to handle this action.
    </string>
    <string name="navigation_label_previous">previous</string>
    <string name="navigation_label_next">next</string>
    <string name="nav_title_home" translatable="false">Home</string>
    <string name="nav_title_about" translatable="false">About</string>
    <string name="nav_title_data_usage" translatable="false">Data Usage</string>
    <string name="nav_title_help" translatable="false">Help</string>
    <string name="nav_title_privacy" translatable="false">Privacy Policy</string>
    <string name="clock_in_alert_title" translatable="false">Not Clocked In</string>
    <string name="clock_in_alert_message" translatable="false">You must clock in before registering voters.</string>
    <string name="error_partner_id" translatable="false">Invalid Partner ID</string>
    <string name="clock_in_text" translatable="false">Clock In</string>
    <string name="clock_out_text" translatable="false">Clock Out</string>
    <string name="label_event_total_abandoned" translatable="false">Cancelled</string>
    <string name="label_event_total_dln" translatable="false">DLN</string>
    <string name="label_event_total_ssn" translatable="false">SSN</string>
    <string name="label_event_total_email_opt_in" translatable="false">Email Opt In</string>
    <string name="label_event_total_sms_opt_in" translatable="false">SMS Opt In</string>
    <string name="label_event_clock_in_time" translatable="false">Clock In</string>
    <string name="title_event_details" translatable="false">Shift Location</string>
    <string name="title_event_partner_login" translatable="false">Partner Login</string>
    <string name="title_time_tracking" translatable="false">Time Tracking</string>
    <string name="title_shift_summary" translatable="false">Shift Report</string>
    <string name="label_canvasser" translatable="false">Canvasser</string>
    <string name="label_event" translatable="false">Event</string>
    <string name="label_org" translatable="false">Org</string>
    <string name="label_total_registrations" translatable="false">Total Registrations</string>
    <string name="label_time_tracking" translatable="false">Time Tracking</string>
    <string name="time_tracking_default_value" translatable="false">--:--:--</string>
    <string name="clock_out_dialog_text" translatable="false">Do you want to end your canvassing shift?</string>
    <string name="clock_out_must_upload" translatable="false">There are still pending registrations for upload. All registrations have to be uploaded to clock out.</string>
    <string name="shift_timeout_title" translatable="false">Shift Timed Out</string>
    <string name="shift_timeout_message" translatable="false">Your canvassing shift has timed out. Please start a new shift to continue.</string>
    <string name="validating_partner_id" translatable="false">Validating Partner ID</string>
    <string name="shift_progress" translatable="false">Shift Progress</string>
    <string name="pending_registrations">Applications Pending Upload</string>
    <string name="failed_registration_uploads" translatable="false">Requires Admin For Upload</string>
    <string name="upload">upload</string>
    <string name="error_title">Error</string>
    <string name="login_no_wifi_error">Cannot login. Please check network connection</string>
    <string name="update_required" translatable="false">Update Required</string>
    <string name="login_invalid_version" translatable="false">Cannot login, update required. Please upgrade to the latest version of the application.</string>
    <string name="login_invalid_partner_id" translatable="false">Cannot login, invalid partner ID.</string>
    <string name="no_wifi_upload_message">Cannot upload registrations. Please check network connection</string>
    <string name="generic_network_error">Please check network connection</string>
    <string name="cancel_dialog_message">Cancel current registration?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="fragment_title_new_registrant">Name</string>
    <string name="label_us_citizen">I am a U.S. Citizen</string>
    <string name="label_eighteen_or_older">I will be 18 or older by the next election</string>
    <string name="label_name_prefix">Title</string>
    <string name="label_first_name">First Name</string>
    <string name="label_middle_name">Middle Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_name_suffix">Suffix</string>
    <string name="label_birthday">Birthday</string>
    <string name="section_label_eligibility">Eligibility</string>
    <string name="eighteen_or_older_err">You must be 18 or older to vote</string>
    <string name="us_citizen_err">You must be a U.S. citizen</string>
    <string name="email_error">Invalid email</string>
    <string name="email_error_v4">Invalid email.Use format: jsmith@example.com.</string>
    <string name="birthday_error">Must be 18 by %s</string>
    <string name="fragment_title_personal_info">Address</string>
    <string name="section_label_personal_info">Address Information</string>
    <string name="section_label_name">Name</string>
    <string name="section_label_previous_name">Previous Name</string>
    <string name="section_label_registration_address">Residential Address</string>
    <string name="section_label_mailing_address">Mailing Address</string>
    <string name="section_label_previous_address">Previous Address</string>
    <string name="section_label_phone">Phone</string>
    <string name="label_street">Street Address</string>
    <string name="label_street_2">Street Address 2</string>
    <string name="label_city">City</string>
    <string name="label_zip_code">Zip Code</string>
    <string name="label_state">State</string>
    <string name="label_unit_num">Unit Number</string>
    <string name="unit_type">Unit Type</string>
    <string name="label_county">County</string>
    <string name="checkbox_mailing_address_is_different"> I get my mail from a different address from the one above</string>
    <string name="checkbox_address_changed">I have changed my address</string>
    <string name="checkbox_name_changed">I have changed my name</string>
    <string name="label_receive_text">I agree that %s/Pennsylvania Voice/State Voices may call and text me with important updates and reminders</string>
    <string name="error_no_address">Complete registration using paper form</string>
    <string name="zip_code_error">Invalid zip–code</string>
    <string name="zip_code_error_fc">Invalid zip–code for this county</string>
    <string name="fragment_title_additional_info">Personal</string>
    <string name="fragment_title_assistant_info">Assistance</string>
    <string name="section_label_race">Race</string>
    <string name="section_label_party">Political Party</string>
    <string name="signature_description">sign here</string>
    <string name="label_button_register">Register</string>
    <string name="label_drivers_license_id">PennDOT number</string>
    <string name="label_other_party">Other Political Party</string>
    <string name="label_does_not_have_penn_dot">I do not know my PennDOT number</string>
    <string name="political_party_change">I have changed my political party</string>
    <string name="label_ssn_last_four">Last four digits of Social Security number</string>
    <string name="label_does_not_have_ssn">I do not know the last four of my social security number</string>
    <string name="preferred_language_label">Preferred Language to Receive Election Materials</string>
    <string name="section_label_election_info">Personal Info</string>
    <string name="penn_dot_enforcer_text">If you have a PA driver\'s license or PennDOT ID card number, you must use it.  Your PennDOT is the 8 digit number found on the top right of a PA driver\'s license OR non-driver\'s state ID card</string>
    <string name="warning_penn_dot">If you have a PA driver’s license or PennDOT ID card number, you must include it in your registration application.</string>
    <string name="warning_ssn"> If you do not have a PennDOT number, please enter the last 4 digits of your Social Security number.</string>
    <string name="error_penn_dot">Check \"I do not know\" if you don\'t know your PennDOT number</string>
    <string name="error_ssn">Check \"I do not know\" if you don\'t know your SSN last four</string>
    <string name="label_has_assistant">Did someone help you with this form?</string>
    <string name="section_label_assistant_name">Helper Name</string>
    <string name="section_label_assistant_address">Helper Address</string>
    <string name="section_label_assistant_contact_info">Helper Contact Info</string>
    <string name="phone_format_error">Invalid phone number</string>
    <string name="phone_format_error_v4">Invalid phone number.Use 10-digit number.</string>
    <string name="address_format_error">Invalid address</string>
    <string name="city_format_error">Invalid city</string>
    <string name="name_format_error">Invalid name</string>
    <string name="label_email">Email Address</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_phone_type">Type</string>
    <string name="label_receive_email">"I give permission to %s to send me news and updates</string>
    <string name="preferred_language_default">English</string>
    <string name="label_email_confirmation">
    Submit your e-mail address to allow the PA Department of State to send you a message confirming the receipt of your voter registration application:
    \n
    \n
    \u2022 Please note that this email may take up to 24 hours to get to you."
    </string>
    <string name="action_clear" translatable="false">clear</string>
    <string name="register_voter">Register Voter</string>
    <string name="this_is_your_shift_dashboard_click_nregister_voter_to_begin_a_registration_nclick_end_collection_to_stop_collection">This is your shift dashboard. Click <i>Register Voter</i> to begin a registration.Click <i>End Collection</i> to stop collection.</string>
    <string name="collection_status">Collection Status</string>
    <string name="last_complected_registration">Last Completed Registration: </string>
    <string name="end_collection">End Collection</string>
    <string name="collection_has_ended_and_you_must_nupload_all_voter_registration_records_nbefore_ending_your_shift_do_not_begin_nthis_until_you_are_somewhere_with_a_ngood_wi_fi_signal">Collection has ended, and you must \nupload all voter registration records \nbefore ending your shift. Do not begin \nthis until you are somewhere with a \ngood Wi-Fi signal.</string>
    <string name="successfully_uploaded">Successfully Uploaded</string>
    <string name="registrations_to_upload">Registrations to Upload</string>
    <string name="upload_registrations">Upload Registrations</string>
    <string name="error_wifi_signal">An error has occured while uploading. \nPlease try again. Do not begin this until \n you are somewhere with a good Wi-Fi \n signal.</string>
    <string name="enter_your_partner_id_in_the_field_below_n_and_click_the_lookup_button">Enter your partner ID in the field below,\nand click the <i>Lookup</i> button.</string>
    <string name="start_shift_with_partner_id">Start Shift with Partner ID</string>
    <string name="lookup">Lookup</string>
</resources>