<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginStart="@dimen/content_margin"
        android:gravity="center_vertical"
        android:text="@string/start_shift_with_partner_id"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.12"
        android:background="@android:color/black"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_marginEnd="@dimen/content_margin"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/enter_your_partner_id_in_the_field_below_n_and_click_the_lookup_button"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="Partner ID"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ede_til_partner_id"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/content_margin"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginTop="@dimen/content_area_padding"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ede_partner_id"
            style="@android:style/TextAppearance.Material.Subhead"
            android:layout_width="match_parent"
            android:paddingStart="8dp"
            android:maxLength="12"
            android:layout_height="30dp"
            android:background="@drawable/edittext_frame"
            android:inputType="number"
            android:maxLines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:visibility="gone"
        android:id="@+id/clear_partner_info"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_marginStart="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:text="@string/action_clear"/>

    <com.rockthevote.grommet.ui.misc.BetterViewAnimator
        android:id="@+id/save_view_animator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <Button-->
<!--            android:id="@+id/event_partner_id_save"-->
<!--            style="@style/Widget.AppCompat.Button.Borderless"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end|bottom"-->
<!--            android:text="@string/action_next"/>-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_partner_id_save"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/oval_shift"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_gravity="center|top"
            android:text="@string/lookup"
            android:textColor="@color/white" />
        <LinearLayout
            android:id="@+id/save_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:layout_gravity="end|bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validating_partner_id"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingEnd="28dp"/>
        </LinearLayout>
    </com.rockthevote.grommet.ui.misc.BetterViewAnimator>
</LinearLayout>