<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="90dp">
<LinearLayout

    android:id="@+id/session_summary_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:text="@string/collection_status"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="18dp"
        android:background="@color/divider"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/collection_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="60dp"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/impostor_status_text"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/content_margin"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="@dimen/detail_vertical_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="72dp"
        android:text="@string/this_is_your_shift_dashboard_click_nregister_voter_to_begin_a_registration_nclick_end_collection_to_stop_collection"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_voter_btn"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:background="@drawable/oval_shift"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/register_voter"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/last_completed_registr_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/last_complected_registration"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/collection_status_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorBlueAccent"/>
    </LinearLayout>


    <include
        android:id="@+id/event_collection_status_stats"
        layout="@layout/summary_totals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginTop="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/end_collection_btn"
        android:layout_marginTop="32dp"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/oval_shift"
        android:gravity="center"
        android:textStyle="bold"
        android:text="End Collection"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white" />
</LinearLayout>
</ScrollView>